--- a/10_Shop_MultiProduct/Views/Article/Index.cshtml
+++ b/10_Shop_MultiProduct/Views/Article/Index.cshtml
@@ -20,7 +20,7 @@
 <div class="breadcrumbs">
     <div class="container">
         <ul>
-            <li><a href="/">Trang chủ</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/blog">blogs</a></li>
             <li><span>@item.Title</span></li>
         </ul>
