--- a/10_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/10_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -23,7 +23,7 @@
     <div class="breadcrumbs">
         <div class="container">
             <ul>
-                <li><a href="/" title="Trang chủ">Trang chủ</a></li>
+                <li><a href="/" title="Home page">Home</a></li>
                 <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName, item.ParentId)" title="">@item.ParentCatName</a></li>
                 <li><a href="@Anpero.StringHelpper.GetCategoryLink(item.CatName, item.CatID)" title="">@item.CatName</a> </li>
                 <li><span>@item.PrName</span></li>
