--- a/10_Shop_MultiProduct/Views/Article/Category.cshtml
+++ b/10_Shop_MultiProduct/Views/Article/Category.cshtml
@@ -22,7 +22,7 @@
 <div class="breadcrumbs">
     <div class="container">
         <ul>
-            <li><a href="/">Trang chủ</a></li>
+            <li><a href="/">Home</a></li>
             <li><span>Blog</span></li>
         </ul>
     </div>
