--- a/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
     @RenderSection("health", required: false)
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
     <link rel="dns-prefetch" href="https://www.facebook.com/">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
+    <link rel="dns-prefetch" href="https://static.doubleclick.net/">
+
     <link href='/static/css' rel='stylesheet' type='text/css'>
     <script src="/Scripts/jquery-1-10.js"></script>
     <script>
