--- a/10_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/10_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -146,8 +146,8 @@
                     </div>
                 <div class="tab_content_wrapper">
                     <div class="tab_navigation">
-                        <span class="tab_nav tab_nav_1 active" data-tab="0">Chi tiết</span>
-                        <span class="tab_nav tab_nav_2" data-tab="1">Hướng dẫn thanh toán</span>
+                        <span class="tab_nav tab_nav_1 active" data-tab="0">Detail</span>
+                        
                     </div>
                     <div class="tab_content">
                         <div class="tab_item tab_item_1 active">
