--- a/10_Shop_MultiProduct/Views/Product/Checkout.cshtml
+++ b/10_Shop_MultiProduct/Views/Product/Checkout.cshtml
@@ -41,7 +41,7 @@
                     <ul class="form-list">
                         <li class="row">
                             <div class="col-sm-12">
-                                <label for="first_name_1" class="required mt-25">Họ tên (*)</label>
+                                <label for="first_name_1" class="required mt-25">Your Name (*)</label>
                                 <input class="input form-control" type="text" name="" id="cName">
                             </div>
                         </li>
@@ -325,6 +325,9 @@
     <script src="~/Scripts/Bootrap.notify.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <style>
+        .cart_product img{
+            max-width:100px;
+        }
         .mt-25 {
             margin-top: 25px;
         }
