--- a/10_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/10_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
 <div class="page_container">
     <div class="main_content ">
         <div id="shopify-section-1547051873685" class="shopify-section index-section">
-            <div class="section section_homepage section_slideshow_full_width section_slideshow__large swiper-container" id="slideshow_1547051873685" data-autoplay="false" data-speed="5000">
+            <div class="section section_homepage section_slideshow_full_width section_slideshow__large swiper-container" id="slideshow_1547051873685" data-autoplay="true" data-speed="5000">
                 <div class="swiper-wrapper">
                     @if (ViewData["Slide"] != null)
                     {
