--- a/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -10,83 +10,74 @@
 <html lang="vi" class="color_scheme">
 <head>
     <meta charset="utf-8">
-    <title>@ViewBag.Title</title>
-
-    @Styles.Render("~/Content/css")
-
-    <link rel="icon" href="@commonInfo.Logo" type="image/x-icon">
-    <link rel="shortcut icon" href="@commonInfo.Logo" type="image/x-icon">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name="description" content="@commonInfo.Desc" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="Refresh" content="3600" />
-    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name="robots" content="*">
     <!-- Apple iOS and Android stuff -->
     <meta name="apple-mobile-web-app-capable" content="no" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheet/font-awesome.css" media="all">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
-    @RenderSection("health", required: false)
+    <title>@ViewBag.Title</title>
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
     <link rel="dns-prefetch" href="https://www.facebook.com/">
-    <link href='/static/css' rel='stylesheet' type='text/css'>
-    <link href="/assets/animate.css" rel="stylesheet" />
-    <link href="/assets/style.css" rel="stylesheet" type="text/css" media="all" />
-    <noscript id="deferred_styles">
-        <link href="/assets/responsive.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="http://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&amp;subset=cyrillic" rel="stylesheet" type="text/css">S
-    </noscript>
-    <script src="/Scripts/jquery-1-10.js"></script>
-    <script>
-			var theme = {
-				moneyFormat: "${{amount}}",
-			};
-    </script>
-    <link href="~/assets/stylesheet/font-awesome.css" rel="stylesheet" />
+
+    @Styles.Render("~/bundle/css")
+    
+    <link rel="icon" href="@commonInfo.Logo" type="image/x-icon">
+    <link rel="shortcut icon" href="@commonInfo.Logo" type="image/x-icon">
+
+    @RenderSection("health", required: false)
 </head>
-<body class="template-index scheme_1">
-    <div class="page_wrapper">
-        <div id="page_preloader__bg">
-            <img id="page_preloader__img" src="/assets/loadingLogo.gif" />
+<body>
+
+    @Html.Partial("_partial/_HeaderPartial")
+
+    <div class="main-page">
+        @RenderBody()
+    </div>
+    <!--main-page-->
+
+    @Html.Partial("_partial/_FooterPartial")
+
+    <div class="box-temp-fixed item-fix">
+        <div class="box-back-top item-fix">
+            <a href="javascript:void(0)">
+                <img src="~/Html/images/to-top.png" alt="">
+            </a>
         </div>
-        <script>
-            preloaderBg = document.getElementById('page_preloader__bg');
-            preloaderImg = document.getElementById('page_preloader__img');
 
-            window.addEventListener('load', function () {
-                preloaderBg.classList.add("off");
-                preloaderImg.classList.add("off");
-            });
-
-        </script>
-        @Html.Partial("_partial/_MainHeader_1")
-        <div class="page_container">
-            <div class="main_content ">
-                @RenderBody()
-            </div>
+        <div class="box-cart-fixed item-fix">
+            <a href="javascript:void(0);">
+                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <span class="js-cart-count numberCart">99</span>
+            </a>
         </div>
-        <a id="back_top" href="#">
-            <i class="fa fa-angle-up" aria-hidden="true"></i>
-        </a>
 
+        <div class="box-hotline item-fix">
+            <label>
+                <a href="tel:@commonInfo.HotLine" title="Hot line @commonInfo.HotLine">
+                    <span></span>
+                    <p>Tư vấn miễn phí (24/7)<span>@commonInfo.HotLine</span></p>
+                </a>
+                <i class="close-hotline"></i>
+            </label>
+        </div>
     </div>
 
-    <h1 id="heading1" style="display:none;">
-        @commonInfo.Desc
-    </h1>
-
-    @Html.Partial("_partial/_MainFooter_1")
     @RenderSection("scripts", required: false)
-
-    <script defer="defer" src="/assets/js/express_buttons.js" crossorigin="anonymous"></script>
-    <script src="/assets/js/features.js" defer="defer" crossorigin="anonymous"></script>
-    <script id="sections-script" data-sections="index-slideshow-full-width,index-banners-countdown-custom,index-logo-list,header,footer" defer="defer" src="/assets/shop.js"></script>
-    @Scripts.Render("~/bundles/scripts")
 
     @Html.Raw(commonInfo.AnperoPlugin)
     @Html.Raw(commonInfo.PageScript)
+
+    @Scripts.Render("~/bundle/js")
+
     <script type="text/javascript">
+        var theme = {
+            moneyFormat: "${{amount}}",
+        };
+
         jQuery(window).load(function () {
             Cart.bindCart();
         });
