--- a/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
     <div class="box-temp-fixed item-fix">
         <div class="box-back-top item-fix">
             <a href="javascript:void(0)">
-                <img src="~/Html/images/to-top.png" alt="">
+                <img src="~/html/images/to-top.png" alt="">
             </a>
         </div>
 
