--- a/12_Shop_MultiProduct/Views/Product/List.cshtml
+++ b/12_Shop_MultiProduct/Views/Product/List.cshtml
@@ -50,7 +50,7 @@
                         else
                         {
                             <li>
-                                <a href="@Anpero.StringHelpper.GetParentCategoryLink(productList.Item[0].ParentCatName, productList.Item[0].ParentId)" title="@productList.Item[0].ParentCatName">
+                                <a href="@Anpero.StringHelpper.GetCategoryLink(productList.Item[0].ParentCatName, productList.Item[0].ParentId)" title="@productList.Item[0].ParentCatName">
                                     @productList.Item[0].ParentCatName
                                 </a>
                             </li>
