--- a/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -12,12 +12,13 @@
 <html lang="vi" class="color_scheme">
 <head>
     <meta charset="utf-8">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com/">    
+    <link rel="dns-prefetch" href="https://www.facebook.com/">
     <title>@ViewBag.Title</title>
 
-    @Styles.Render("~/Content/css")
-
-    <link rel="icon" href="@commonInfo.Logo" type="image/x-icon">
-    <link rel="shortcut icon" href="@commonInfo.Logo" type="image/x-icon">
+    @Styles.Render("~/Content/css")    
+    <link rel="shortcut icon" href="@(string.IsNullOrEmpty(commonInfo.Favicon)?commonInfo.Logo:commonInfo.Favicon)" type="image/x-icon">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="Refresh" content="3600" />
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -30,10 +31,9 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
     @RenderSection("health", required: false)
-    <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
-    <link rel="dns-prefetch" href="https://www.facebook.com/">
+
     <link href='/static/css' rel='stylesheet' type='text/css'>
-    <script src="/Scripts/jquery-1-10.js"></script>
+    <script src="//media.anpero.com/cdn/assets/plugins/jquery-1.10.2.min.js"></script>
     <script>
 			var theme = {
 				moneyFormat: "${{amount}}",
